--- a/android/app/src/main/res/layout/activity_splash.xml
+++ b/android/app/src/main/res/layout/activity_splash.xml
@@ -6,13 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:orientation="vertical"
     android:background="#ECF1FF"
     tools:context=".SplashActivity">
-
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:background="@drawable/boot_icon"
         tools:layout_editor_absoluteX="112dp"
         tools:layout_editor_absoluteY="311dp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
